--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": "Data Source = (localdb)\\mssqllocaldb; Initial Catalog = ChatAppSRRDB; Integrated Sercurity = True"
 }
