--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": "Data Source = (localdb)\\mssqllocaldb; Initial Catalog = ChatAppSRRDB; Integrated Sercurity = True"
+  "ConnectionStrings": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = ChatAppSRRDB; Integrated Security = True"
 }
